--- a/DocumentMicroservice/build.gradle
+++ b/DocumentMicroservice/build.gradle
@@ -3,10 +3,15 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'war'
 }
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
+
+war {
+    archiveFileName = "docs.war"
+}
 
 repositories {
     mavenCentral()
@@ -27,6 +32,9 @@ dependencies {
 //    runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation("org.springframework.boot:spring-boot-starter-validation")
 }
 
 dependencyManagement {
