--- a/DocumentMicroservice/build.gradle
+++ b/DocumentMicroservice/build.gradle
@@ -10,7 +10,7 @@ group = 'org.example'
 version = '1.0-SNAPSHOT'
 
 war {
-    archiveFileName = "docs.war"
+    archiveFileName = "note-documents.war"
 }
 
 repositories {
